# tree-sitter-ci-scanner

./: .gitignore  .gitlab-ci.yml  .scanner.yaml  Cargo.toml  Dockerfile.server  README.md  benchmark.sh  docker-compose.yml
.github/workflows/: release.yml  reusable-scan.yml  scan.yml
benches/: benchmark.rs
rules/: html-accessibility.yaml  javascript-conventions.yaml  javascript-security.yaml  python-conventions.yaml  python-security.yaml  team-conventions.yaml  typescript-safety.yaml
server/: Cargo.toml
server/src/: config.rs  main.rs  policy.rs
server/src/api/: mod.rs  rules.rs  scan.rs
server/src/auth/: github_oauth.rs  local.rs  middleware.rs  mod.rs  session.rs
server/src/dashboard/: routes.rs
server/src/db/: mod.rs  models.rs
server/src/db/migrations/: 0001_initial.sql  0002_local_auth.sql  0003_pg18_optimizations.sql
server/src/github/: mod.rs  rules_fetcher.rs  status.rs
server/templates/: base.html  docs.html  findings.html  index.html  keys.html  login.html  register.html  settings.html
server/templates/partials/: findings_rows.html
src/: cache.rs  lib.rs  main.rs  output.rs  parser.rs  querier.rs  rules.rs  scanner.rs  utils.rs
test-files/: bad-code.js  test.html
test-files/subdir/: more-bad.ts
tests/: performance.rs
tests/fixtures/javascript/: bad-code.js  good-code.js
tests/fixtures/typescript/: bad-code.ts
