[package]
name = "scanner"
version = "0.1.0"
edition = "2021"
description = "A fast, tree-sitter based static analysis tool for CI/CD"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/tree-sitter-ci-scanner"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Parallelism
rayon = "1.8"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Tree-sitter
tree-sitter = "0.22"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-html = "0.20"

# SARIF (we'll implement it manually with serde_json)

# File system
walkdir = "2.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = "0.8.2"
tempfile = "3.8"
