[workspace]
members = [".", "server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crstnmac/tree-sitter-ci-scanner"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

[package]
name = "scanner"
version.workspace = true
edition.workspace = true
description = "A fast, tree-sitter based static analysis tool for CI/CD"
license.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Parallelism
rayon = "1.8"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Tree-sitter
tree-sitter = "0.22"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-html = "0.20"

# File system
walkdir = "2.4"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = "0.8.2"
tempfile = "3.8"
